--- a/src/app/user-management/user-details/user-details.component.scss
+++ b/src/app/user-management/user-details/user-details.component.scss
@@ -19,7 +19,7 @@
   padding-left: 15px;
 }
 .album-box {
-  border: 2px solid black;
-  margin: 10px;
-  padding-left: 15px;
+  display: flex;
+  flex-wrap: wrap;
+
 }
