--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
           User Management
         </a>
       </li>
-      <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+      <li class="nav-item"><a href="/form" class="nav-link">Form</a></li>
       <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link">About</a></li>
     </ul>
