--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
         </a>
       </li>
       <li class="nav-item"><a href="/form" class="nav-link">Form</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+      <li class="nav-item"><a href="/search" class="nav-link">Search</a></li>
       <li class="nav-item"><a href="#" class="nav-link">About</a></li>
     </ul>
   </header>
