update search auto complete 2

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,42 +1,36 @@
-
-  <div class="search mb-5">
-    <form
-      class="form-inline"
-      [formGroup]="searchForm"
-      (ngSubmit)="onSearchSubmit()"
-    >
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">
-            <i class="bi bi-search"></i>
-          </span>
-        </div>
-        <input
-          class="form-control"
-          type="text"
-          formControlName="search"
-          placeholder="Search "
-          aria-label="Search"
-          (click)="toggleDropDown()"
-        />
+<div class="search mb-5">
+  <form class="form-inline" [formGroup]="searchForm">
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text">
+          <i class="bi bi-search"></i>
+        </span>
       </div>
-      <div class="dropdown-container" *ngIf="isOpenDropDown">
-        <div
-          *ngFor="let post_title of searchedData; let i = index"
-          class="post_title_dd"
-          (click)="selectSearchKey(searchedData[i].title)"
-        >
-          {{ searchedData[i].title }}
-        </div>
-      </div>
-    </form>
-  </div>
-  <div *ngIf="searchValue">
-    <div class="card mb-3" *ngFor="let data of searchedData; let i = index">
-      <div class="card-header">{{ searchedData[i].title }}</div>
-      <div class="card-body">
-        <div class="card-text">{{ searchedData[i].body }}</div>
+      <input
+        class="form-control"
+        type="text"
+        formControlName="search"
+        placeholder="Search "
+        aria-label="Search"
+        (click)="toggleDropDown()"
+      />
+    </div>
+    <div class="dropdown-container" *ngIf="isOpenDropDown">
+      <div
+        *ngFor="let post_title of searchedData; let i = index"
+        class="post_title_dd"
+        (click)="selectSearchKey(searchedData[i].title)"
+      >
+        {{ searchedData[i].title }}
       </div>
     </div>
+  </form>
+</div>
+<div *ngIf="isSearchKeySelected">
+  <div class="card mb-3" *ngFor="let data of searchedData; let i = index">
+    <div class="card-header">{{ searchedData[i].title }}</div>
+    <div class="card-body">
+      <div class="card-text">{{ searchedData[i].body }}</div>
+    </div>
   </div>
-
+</div>
