--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -6,11 +6,11 @@
   overflow-y: auto;
 }
 
-.post_title_dd {
+.post-title-dd {
   padding: 10px;
   color: chocolate;
 }
-.post_title_dd:hover {
+.post-title-dd:hover {
   background-color: rgb(238, 243, 250);
   cursor: pointer;
 }
