--- a/src/app/modules/user-management/user/user.component.html
+++ b/src/app/modules/user-management/user/user.component.html
@@ -14,12 +14,24 @@
   <div class="p4">
     <h1><i class="bi bi-people"></i> User list</h1>
     <div class="card mb-3" *ngFor="let userData of userList">
-      <div class="card-body">
-        <h5 class="card-title">
-          <a [routerLink]="['/user/details', userData.id]">
-            {{ userData.name }}
-          </a>
-        </h5>
+      <div class="card-body row">
+        <div class="col-sm-6">
+          <h5 class="card-title">
+            <a [routerLink]="['/user/details', userData.id]">
+              {{ userData.name }}
+            </a>
+          </h5>
+        </div>
+        <div class="col-sm-6">
+          <div class="pull-right">
+            <button
+              class="btn btn-success"
+              [routerLink]="['/albums', userData.id, userData.name]"
+            >
+              <i class="bi bi-images"></i> Show Album
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -27,6 +39,7 @@
 <button class="btn btn-primary" (click)="fetchUserList()">
   Fetch User List
 </button>
+
 <app-card *ngFor="let userData of userList">
   <h5 class="card-title">
     <a [routerLink]="['/user/details', userData.id]">
