feat(books): create book module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,4 @@
-<ul class="d-none">
-  <li routerLinkActive="active" routerLink="/">Home</li>
-  <li routerLinkActive="active" routerLink="/add">Add</li>
-  <li routerLinkActive="active" routerLink="/dashboard">List</li>
-  <li routerLinkActive="active" routerLink="/details">Details</li>
-  <li routerLinkActive="active" routerLink="/form">Form</li>
-  <li routerLinkActive="active" routerLink="/comments">Comments</li>
-  <li routerLinkActive="active" routerLink="/user">User Management</li>
-</ul>
-
-<div class="container">
+z<div class="container">
   <header
     class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
   >
@@ -33,6 +23,7 @@
       </li>
       <li class="nav-item"><a href="/form" class="nav-link">Form</a></li>
       <li class="nav-item"><a href="/search" class="nav-link">Search</a></li>
+      <li class="nav-item"><a href="/books" class="nav-link"> <i class="bi bi-book"></i> Books</a></li>
       <li class="nav-item"><a href="#" class="nav-link">About</a></li>
     </ul>
   </header>
