--- a/src/app/modules/books/books.component.html
+++ b/src/app/modules/books/books.component.html
@@ -1,31 +1,45 @@
-<!-- <pre>{{ bookList | json }}</pre> -->
+<!-- <pre>{{ genreList | json }}</pre> -->
 <h2>Book List</h2>
+
 <div class="my-4 d-flex flex-wrap" [ngStyle]="{ gap: '8px' }">
-  <span
+  <!-- <span
     class="badge border border-primary"
     *ngFor="let genre of genreList"
-    (click)="selectedGenre = genre"
+    (click)="selectedGenre = [genre]"
     [ngClass]="{
       'text-bg-primary': genre === selectedGenre,
       'text-dark': genre !== selectedGenre
+    }"
+    >{{ genre }}</span> -->
+
+  <span
+    class="badge border border-primary"
+    *ngFor="let genre of genreList"
+    (click)="filterBookListOnGenre(genre)"
+    [ngClass]="{
+      'text-bg-primary': selectedGenreList.includes(genre),
+      'text-dark': !selectedGenreList.includes(genre)
     }"
     >{{ genre }}</span
   >
 </div>
 
-<ol class="list-group list-group-numbered">
-  <li
-    class="list-group-item d-flex justify-content-between align-items-start"
-    *ngFor="let book of bookList| bookFilter : selectedGenre"
-  >
-    <div class="ms-2 me-auto">
-      <div class="fw-bold">{{ book.title }}</div>
-      {{ book.author }}
-    </div>
-    <span
-      class="badge text-bg-dark d-inline-block me-2 px-3"
-      *ngFor="let genre of book.genre"
-      >{{ genre }}</span
+<ng-container *ngIf="bookList | bookFilter : selectedGenreList as books">
+  <small class="text-primary">{{ books.length }} Books found!</small>
+  <ol class="list-group list-group-numbered">
+    <li
+      class="list-group-item d-flex justify-content-between align-items-start"
+      *ngFor="let book of books"
     >
-  </li>
-</ol>
+      <div class="ms-2 me-auto">
+        <div class="fw-bold">{{ book.title }}</div>
+        {{ book.author }}
+      </div>
+      <span
+        class="badge text-bg-dark d-inline-block me-2 px-3"
+        *ngFor="let genre of book.genre"
+        >{{ genre }}</span
+      >
+    </li>
+  </ol>
+</ng-container>
