feat(country module): include country module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,3 @@
-z<div class="container">
-  <header
-    class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
-  >
-    <a
-      routerLink="/"
-      class="d-flex align-items-center mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-    >
-      <i class="logo bi bi-brilliance text-primary"></i>
-      <span class="fs-4">Practice 1.0</span>
-    </a>
+<app-header></app-header>
 
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/dashboard">
-          Dashboard
-        </a>
-      </li>
-      <li class="nav-item">
-        <a routerLinkActive="active" routerLink="/user" class="nav-link">
-          User Management
-        </a>
-      </li>
-      <li class="nav-item"><a href="/form" class="nav-link">Form</a></li>
-      <li class="nav-item"><a href="/search" class="nav-link">Search</a></li>
-      <li class="nav-item"><a href="/books" class="nav-link"> <i class="bi bi-book"></i> Books</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-    </ul>
-  </header>
-</div>
 <div class="container"><router-outlet></router-outlet></div>
