--- a/src/app/modules/country/countries/countries.component.html
+++ b/src/app/modules/country/countries/countries.component.html
@@ -1,4 +1,7 @@
 <ng-container *ngIf="countryList">
+  <h2>Country List</h2>
+  <hr />
+  <small class="text-primary">{{ countryList.length }} countries found!</small>
   <table class="table table-striped table-hover">
     <thead>
       <tr>
@@ -45,11 +48,12 @@
 
   <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center" *ngIf="pageArray.length > 1">
-      <li class="page-item" *ngIf="pageArray.length > 2">
-        <a class="page-link" href="#" aria-label="Previous">
+      <li class="page-item" *ngIf="pageArray.length > 3">
+        <a class="page-link" href="javascript:void(0)" aria-label="Previous">
           <span aria-hidden="true">&laquo;</span>
         </a>
       </li>
+      <ng-container></ng-container>
 
       <li class="page-item" *ngFor="let page of pageArray; let id = index">
         <a
@@ -59,9 +63,14 @@
           >{{ id + 1 }}</a
         >
       </li>
+      <li class="page-item" *ngIf="pageArray.length >= 3">
+        <a class="page-link" href="javascript:void(0)" aria-label="Previous">
+          <span aria-hidden="true">...</span>
+        </a>
+      </li>
 
-      <li class="page-item" *ngIf="pageArray.length > 2">
-        <a class="page-link" href="#" aria-label="Next">
+      <li class="page-item" *ngIf="pageArray.length > 3">
+        <a class="page-link" href="javascript:void(0)" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
         </a>
       </li>
